--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
   "license": "ISC",
   "bugs": {},
   "dependencies": {
-    "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@prisma/client": "^6.7.0",
     "nodemon": "^3.1.10",
-    "prisma": "^6.6.0"
+    "prisma": "^6.7.0"
   }
 }
