Added postinstall to scripts to generate prisma

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "build": "prisma generate",
+    "start": "node app.js",
+    "postinstall": "prisma generate"
   },
   "repository": {
     "type": "git"
