--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "qrcode": "^1.5.4",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "@prisma/client": "^6.7.0",
+    "prisma": "^6.7.0"
   },
   "devDependencies": {
-    "@prisma/client": "^6.7.0",
-    "nodemon": "^3.1.10",
-    "prisma": "^6.7.0"
+    "nodemon": "^3.1.10"
   }
 }
