--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon app.js",
     "build": "prisma generate",
+    "migrate": "npx prisma migrate deploy",
     "start": "node app.js",
     "postinstall": "prisma generate"
   },
