--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "ISC",
   "bugs": {},
   "dependencies": {
+    "@prisma/client": "^6.7.0",
+    "axios": "^1.13.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
@@ -27,6 +29,7 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
+    "firebase-admin": "^13.5.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^2.0.2",
@@ -36,10 +39,9 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "prisma": "^6.7.0",
     "qrcode": "^1.5.4",
-    "socket.io": "^4.8.1",
-    "@prisma/client": "^6.7.0",
-    "prisma": "^6.7.0"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
